--- a/your-code/Solutions.ipynb
+++ b/your-code/Solutions.ipynb
@@ -25,11 +25,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "tup= (\"I\",)\n"
    ]
   },
   {
@@ -43,11 +43,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tuple"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "type(tup)\n"
    ]
   },
   {
@@ -64,14 +75,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Your code here\n",
+    "No\n",
     "\n",
-    "# Your explanation here\n"
+    "Tupples are immutables\n"
    ]
   },
   {
@@ -89,13 +98,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (Temp/ipykernel_25488/2745098509.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\patri\\AppData\\Local\\Temp/ipykernel_25488/2745098509.py\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    Tupples are immutables\u001b[0m\n\u001b[1;37m            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n",
+    "No\n",
     "\n",
-    "# Your explanation here\n"
+    "Tupples are immutables"
    ]
   },
   {
@@ -117,7 +135,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "tup_lst = list(tup)\n",
+    "tup_lst = tup_lst + [\"r\", \"o\", \"n\", \"h\", \"a\", \"c\", \"k\"]\n",
+    "\n",
+    "tup_lst1= []\n",
+    "tup_lst2= []\n",
+    "for i in range(len(tup_lst)): \n",
+    "    if len(tup_lst1) < 4:\n",
+    "        tup_lst1.append(tup_lst[i])\n",
+    "    else:\n",
+    "        tup_lst2.append(tup_lst[i])\n",
+    "\n",
+    "tup1=tuple(tup_lst1)\n",
+    "tup2=tuple(tup_lst2)\n",
+    "print(tup1)\n",
+    "print(tup2)"
    ]
   },
   {
@@ -135,7 +167,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "tup3=tup1+tup2\n",
+    "list(tup3)"
    ]
   },
   {
@@ -151,7 +184,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "print(len(tup1))\n",
+    "print(len(tup2))\n",
+    "\n",
+    "len(tup1)+ len(tup2) == len(tup3)\n",
+    "\n"
    ]
   },
   {
@@ -167,7 +204,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "tup_lst3=list(tup3)\n",
+    "tup_lst3.index(\"h\")\n"
    ]
   },
   {
@@ -191,25 +229,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "letters = [\"a\", \"b\", \"c\", \"d\", \"e\"]\n",
+    "for l in letters:\n",
+    "    if l in tup3:\n",
+    "        print(True)\n",
+    "    else:\n",
+    "        print(False)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### How many times does each letter in `letters` appear in `tup3`?\n",
+    "How many times does each letter in `letters` appear in `tup3`?\n",
     "\n",
     "Print out the number of occurrence of each letter."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "letters = [\"a\", \"b\", \"c\", \"d\", \"e\"]\n",
+    "tup3= ['I', 'r', 'o', 'n', 'h', 'a', 'c', 'k']\n",
+    "\n",
+    "contador = 0\n",
+    "for i in letters:\n",
+    "    for i2 in tup3:\n",
+    "        if i2 == i:\n",
+    "            contador += 1\n",
+    "            print('La letra '+ i + ' aparece '+ str(contador) + ' veces en tup3')"
    ]
   },
   {
@@ -250,11 +302,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 21, 83, 3, 61, 16, 43, 10, 24, 56, 79, 91, 2, 38, 9, 66, 67, 96, 12, 74, 33, 80, 35, 57, 13, 46, 19, 62, 70, 45, 81, 95, 39, 51, 22, 42, 94, 1, 97, 30, 85, 99, 20, 55, 58, 54, 71, 14, 72, 75, 82, 26, 41, 88, 18, 65, 49, 86, 17, 23, 59, 89, 77, 5, 52, 36, 69, 37, 84, 60, 90, 63, 0, 53, 68, 48, 76, 8, 32, 31]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "sample_list1=random.sample(range(0, 100), 80)\n",
+    "print(sample_list1)"
    ]
   },
   {
@@ -266,11 +327,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "set1= set(sample_list1)\n",
+    "print(len(set1))\n"
    ]
   },
   {
@@ -289,11 +359,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[30, 73, 72, 56, 96, 97, 49, 4, 51, 82, 64, 98, 19, 81, 62, 86, 77, 57, 98, 23, 41, 20, 24, 52, 55, 6, 61, 5, 5, 17, 77, 22, 95, 0, 52, 79, 79, 72, 82, 96, 52, 67, 0, 87, 51, 66, 10, 2, 79, 69, 93, 64, 19, 38, 8, 66, 11, 58, 94, 70, 34, 13, 90, 47, 59, 52, 84, 16, 45, 72, 74, 62, 39, 81, 77, 14, 72, 9, 92, 59]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "sample_list_2 = []\n",
+    "\n",
+    "for i in range(80):\n",
+    "    a=random.randint(0,100)\n",
+    "    sample_list_2.append(a)\n",
+    "print(sample_list_2)\n",
+    "    "
    ]
   },
   {
@@ -489,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +700,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -630,7 +714,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   },
   "toc": {
    "base_numbering": 1,
