--- a/your-code/Solutions.ipynb
+++ b/your-code/Solutions.ipynb
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,14 +407,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[62, 93, 61, 50, 71, 25, 20, 9, 65, 99, 60, 39, 88, 21, 55, 64, 32, 98, 24, 80, 77, 78, 87, 76, 3, 52, 17, 16, 37, 91, 84, 100, 40, 6, 72, 48, 97, 4, 83, 46, 68, 0, 14, 70, 1, 85, 58, 15, 26, 28, 10, 89, 59, 27, 30, 13, 11, 2, 19, 33, 90, 41, 18, 67, 44, 47, 38, 63, 95, 36, 81, 96, 22, 12, 34, 54, 56, 43, 31, 94]\n"
+      "[0, 62, 22, 55, 91, 80, 5, 71, 35, 95, 32, 9, 65, 37, 73, 29, 31, 98, 16, 54, 99, 48, 94, 1, 50, 49, 47, 20, 70, 59, 81, 27, 28, 97, 7, 74, 13, 53, 83, 100, 33, 4, 18, 52, 60, 44, 77, 96, 17, 25, 61, 24, 40, 66, 51, 56, 72, 79, 63, 12, 2, 43, 26, 82, 88, 30, 67, 76, 89, 42, 58, 11, 84, 8, 78, 41, 69, 14, 36, 15]\n"
      ]
     }
    ],
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -476,14 +476,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[64, 70, 87, 30, 25, 35, 84, 14, 99, 83, 0, 28, 8, 88, 60, 21, 50, 90, 54, 24, 89, 69, 76, 7, 77, 1, 49, 36, 63, 73, 46, 13, 45, 81, 62, 80, 94, 78, 4, 55, 91, 98, 33, 97, 31, 92, 32, 17, 61, 23, 47, 51, 65, 43, 39, 48, 3, 59, 67, 16, 41, 42, 2, 95, 96, 15, 11, 29, 71, 19, 72, 82, 52, 58, 27, 44, 85, 22, 40, 79]\n"
+      "[72, 11, 44, 61, 77, 20, 85, 47, 64, 65, 43, 31, 10, 27, 4, 95, 96, 79, 92, 35, 89, 82, 48, 87, 58, 8, 49, 34, 23, 39, 6, 26, 16, 50, 59, 69, 68, 5, 19, 99, 30, 88, 29, 76, 86, 0, 12, 94, 62, 25, 33, 52, 93, 46, 2, 71, 42, 100, 37, 45, 53, 66, 24, 97, 91, 98, 17, 63, 13, 84, 28, 83, 81, 15, 40, 56, 18, 41, 70, 60]\n"
      ]
     }
    ],
@@ -514,13 +514,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n"
+     ]
+    }
+   ],
    "source": [
     "set2 = set(sample_list_2)\n",
     "\n",
-    "print(len())"
+    "print(len(set2))"
    ]
   },
   {
@@ -532,11 +540,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 4, 5, 7, 8, 9, 11, 12, 13, 14, 15, 16, 17, 18, 20, 22, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 35, 36, 37, 40, 41, 42, 43, 44, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 58, 59, 60, 61, 62, 63, 65, 66, 67, 69, 70, 71, 72, 73, 74, 76, 77, 78, 79, 80, 81, 82, 83, 84, 88, 89, 91, 94, 95, 96, 97, 98, 99, 100}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "set3 = list(set1) + list(set1.intersection(set2))\n",
+    "\n",
+    "print(set(set3))"
    ]
   },
   {
@@ -548,11 +566,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 2, 4, 5, 6, 8, 10, 11, 12, 13, 15, 16, 17, 18, 19, 20, 23, 24, 25, 26, 27, 28, 29, 30, 31, 33, 34, 35, 37, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 52, 53, 56, 58, 59, 60, 61, 62, 63, 64, 65, 66, 68, 69, 70, 71, 72, 76, 77, 79, 81, 82, 83, 84, 85, 86, 87, 88, 89, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "set4 = list(set2) + list(set2.intersection(set1))\n",
+    "\n",
+    "print(set(set4))"
    ]
   },
   {
@@ -564,11 +592,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 2, 4, 5, 8, 11, 12, 13, 15, 16, 17, 18, 20, 24, 25, 26, 27, 28, 29, 30, 31, 33, 35, 37, 40, 41, 42, 43, 44, 47, 48, 49, 50, 52, 53, 56, 58, 59, 60, 61, 62, 63, 65, 66, 69, 70, 71, 72, 76, 77, 79, 81, 82, 83, 84, 88, 89, 91, 94, 95, 96, 97, 98, 99, 100}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "set5 = set1.intersection(set2)\n",
+    "\n",
+    "print(set5)"
    ]
   },
   {
@@ -588,11 +626,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "print(len(set1)==len(set2))\n",
+    "print(len(set3)==len(set4))\n",
+    "print(len(set5)==len(set1))\n",
+    "print(len(set5)==len(set3))"
    ]
   },
   {
@@ -604,11 +656,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "set6 = {}"
    ]
   },
   {
@@ -620,11 +672,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "set6 = set(set3).update(set5)\n",
+    "set6"
    ]
   },
   {
@@ -636,11 +689,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "set1==set6"
    ]
   },
   {
@@ -652,11 +716,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "print(set1.issubset(set2))\n",
+    "print(set1.issubset(set3))"
    ]
   },
   {
@@ -668,11 +742,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100}\n",
+      "{0, 1, 2, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "set3 = set(set3)\n",
+    "\n",
+    "print(set3.union(set4).union(set5))\n",
+    "\n",
+    "print(set3.union(set4).union(set5).union(set1).union(set2))"
    ]
   },
   {
