--- a/your-code/Solutions.ipynb
+++ b/your-code/Solutions.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
        "tuple"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,15 +98,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (Temp/ipykernel_25488/2745098509.py, line 3)",
+     "evalue": "invalid syntax (Temp/ipykernel_23656/2745098509.py, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\patri\\AppData\\Local\\Temp/ipykernel_25488/2745098509.py\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    Tupples are immutables\u001b[0m\n\u001b[1;37m            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\patri\\AppData\\Local\\Temp/ipykernel_23656/2745098509.py\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    Tupples are immutables\u001b[0m\n\u001b[1;37m            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -131,9 +131,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n')\n",
+      "('h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
     "tup_lst = list(tup)\n",
     "tup_lst = tup_lst + [\"r\", \"o\", \"n\", \"h\", \"a\", \"c\", \"k\"]\n",
@@ -163,9 +172,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['I', 'r', 'o', 'n', 'h', 'a', 'c', 'k']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tup3=tup1+tup2\n",
     "list(tup3)"
@@ -180,9 +200,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print(len(tup1))\n",
     "print(len(tup2))\n",
@@ -200,9 +239,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tup_lst3=list(tup3)\n",
     "tup_lst3.index(\"h\")\n"
@@ -225,9 +275,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "letters = [\"a\", \"b\", \"c\", \"d\", \"e\"]\n",
     "for l in letters:\n",
@@ -249,9 +311,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La letra a aparece 1 veces en tup3\n",
+      "La letra c aparece 2 veces en tup3\n"
+     ]
+    }
+   ],
    "source": [
     "letters = [\"a\", \"b\", \"c\", \"d\", \"e\"]\n",
     "tup3= ['I', 'r', 'o', 'n', 'h', 'a', 'c', 'k']\n",
@@ -277,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,14 +373,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[6, 21, 83, 3, 61, 16, 43, 10, 24, 56, 79, 91, 2, 38, 9, 66, 67, 96, 12, 74, 33, 80, 35, 57, 13, 46, 19, 62, 70, 45, 81, 95, 39, 51, 22, 42, 94, 1, 97, 30, 85, 99, 20, 55, 58, 54, 71, 14, 72, 75, 82, 26, 41, 88, 18, 65, 49, 86, 17, 23, 59, 89, 77, 5, 52, 36, 69, 37, 84, 60, 90, 63, 0, 53, 68, 48, 76, 8, 32, 31]\n"
+      "[95, 68, 72, 54, 88, 79, 97, 24, 19, 75, 1, 93, 56, 13, 77, 87, 14, 32, 84, 0, 81, 38, 4, 62, 37, 90, 74, 50, 59, 61, 85, 30, 69, 80, 9, 31, 44, 98, 39, 57, 83, 12, 48, 82, 73, 76, 40, 28, 27, 51, 92, 60, 26, 16, 23, 96, 41, 21, 89, 3, 47, 64, 33, 36, 20, 43, 7, 46, 67, 8, 17, 78, 71, 29, 10, 42, 35, 65, 49, 52]\n"
      ]
     }
    ],
@@ -327,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -359,14 +430,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[30, 73, 72, 56, 96, 97, 49, 4, 51, 82, 64, 98, 19, 81, 62, 86, 77, 57, 98, 23, 41, 20, 24, 52, 55, 6, 61, 5, 5, 17, 77, 22, 95, 0, 52, 79, 79, 72, 82, 96, 52, 67, 0, 87, 51, 66, 10, 2, 79, 69, 93, 64, 19, 38, 8, 66, 11, 58, 94, 70, 34, 13, 90, 47, 59, 52, 84, 16, 45, 72, 74, 62, 39, 81, 77, 14, 72, 9, 92, 59]\n"
+      "[72, 80, 25, 74, 13, 100, 91, 30, 60, 50, 26, 43, 4, 52, 57, 30, 93, 76, 80, 96, 77, 24, 1, 10, 6, 11, 12, 38, 3, 28, 50, 94, 18, 19, 66, 75, 100, 92, 48, 89, 64, 57, 14, 37, 28, 29, 53, 22, 63, 34, 82, 10, 75, 36, 16, 33, 68, 73, 17, 50, 90, 93, 7, 19, 98, 31, 43, 27, 4, 56, 38, 26, 55, 11, 92, 57, 5, 86, 9, 47]\n"
      ]
     }
    ],
@@ -389,11 +460,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "62\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "set2= set(sample_list_2)\n",
+    "print(len(set2))"
    ]
   },
   {
@@ -405,11 +485,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'set4' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_23656/1097619367.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mset3\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mset1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mintersection\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mset2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mset3\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mset2\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mset3\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mset4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'set4' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "set3 = set1.intersection(set2) \n",
+    "set3=set2-set3\n",
+    "print(set4)"
    ]
   },
   {
@@ -421,11 +515,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{34, 66, 100, 5, 6, 11, 18, 53, 22, 55, 86, 25, 91, 94, 63}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "set4 = set1.intersection(set2) \n",
+    "set4=set2-set4\n",
+    "print(set4)"
    ]
   },
   {
@@ -437,11 +541,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 3, 4, 7, 9, 10, 12, 13, 14, 16, 17, 19, 24, 26, 27, 28, 29, 30, 31, 33, 36, 37, 38, 43, 47, 48, 50, 52, 56, 57, 60, 64, 68, 72, 73, 74, 75, 76, 77, 80, 82, 89, 90, 92, 93, 96, 98}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "set5 = set1.intersection(set2)\n",
+    "print(set5)"
    ]
   },
   {
@@ -461,11 +574,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "95\n",
+      "30\n",
+      "80\n",
+      "62\n",
+      "15\n",
+      "15\n",
+      "47\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "len(set1)+len(set2)-len(set5) == len(set3)+len(set4)\n",
+    "print(len(set1)+len(set2)-len(set5))\n",
+    "print(len(set3)+len(set4))\n",
+    "\n",
+    "print(len(set1))\n",
+    "print(len(set2))\n",
+    "print(len(set3))\n",
+    "print(len(set4))\n",
+    "print(len(set5))"
    ]
   },
   {
@@ -477,11 +612,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "set6=set()\n",
+    "type(set6)"
    ]
   },
   {
@@ -493,11 +640,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "set6= set3.update(set5)\n",
+    "print(set6)"
    ]
   },
   {
@@ -509,11 +665,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "set1==set6"
    ]
   },
   {
@@ -573,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,12 +857,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
