--- a/your-code/Solutions.ipynb
+++ b/your-code/Solutions.ipynb
@@ -371,7 +371,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[12, 17, 53, 44, 73, 9, 30, 32, 63, 82, 64, 92, 87, 15, 11, 40, 29, 80, 48, 19, 1, 51, 97, 67, 46, 49, 10, 5, 27, 79, 62, 86, 55, 95, 24, 65, 42, 78, 21, 8, 28, 85, 70, 7, 13, 83, 90, 93, 68, 18, 88, 37, 75, 39, 84, 72, 61, 96, 66, 94, 33, 25, 58, 43, 14, 77, 59, 76, 57, 22, 20, 41, 91, 38, 54, 81, 23, 52, 69, 47]\n"
+      "[54, 48, 52, 90, 36, 14, 15, 58, 56, 34, 33, 65, 91, 46, 83, 92, 97, 62, 50, 29, 51, 80, 95, 88, 98, 1, 45, 0, 44, 85, 82, 37, 41, 27, 39, 25, 18, 86, 59, 19, 84, 94, 96, 24, 40, 11, 55, 6, 76, 21, 35, 42, 71, 49, 78, 20, 99, 61, 38, 77, 72, 8, 23, 67, 60, 22, 68, 66, 79, 64, 7, 10, 87, 32, 3, 12, 16, 93, 2, 13]\n"
      ]
     }
    ],
@@ -397,7 +397,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1, 5, 7, 8, 9, 10, 11, 12, 13, 14, 15, 17, 18, 19, 20, 21, 22, 23, 24, 25, 27, 28, 29, 30, 32, 33, 37, 38, 39, 40, 41, 42, 43, 44, 46, 47, 48, 49, 51, 52, 53, 54, 55, 57, 58, 59, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 72, 73, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 90, 91, 92, 93, 94, 95, 96, 97}\n"
+      "{0, 1, 2, 3, 6, 7, 8, 10, 11, 12, 13, 14, 15, 16, 18, 19, 20, 21, 22, 23, 24, 25, 27, 29, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 44, 45, 46, 48, 49, 50, 51, 52, 54, 55, 56, 58, 59, 60, 61, 62, 64, 65, 66, 67, 68, 71, 72, 76, 77, 78, 79, 80, 82, 83, 84, 85, 86, 87, 88, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99}\n"
      ]
     }
    ],
@@ -430,7 +430,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[96, 2, 27, 3, 55, 42, 57, 49, 36, 76, 95, 16, 25, 18, 28, 81, 30, 28, 18, 3, 68, 39, 21, 71, 41, 87, 76, 96, 23, 92, 83, 50, 16, 99, 11, 32, 21, 41, 35, 64, 9, 41, 29, 30, 92, 40, 27, 55, 53, 42, 33, 17, 59, 30, 12, 36, 47, 54, 34, 14, 91, 23, 41, 9, 77, 13, 59, 37, 90, 73, 61, 28, 40, 50, 11, 32, 27, 58, 70, 6]\n"
+      "[82, 83, 10, 72, 62, 7, 98, 10, 98, 87, 3, 61, 59, 4, 82, 46, 1, 78, 97, 36, 23, 19, 6, 10, 3, 82, 82, 96, 65, 17, 39, 97, 28, 61, 72, 23, 69, 9, 95, 88, 52, 2, 12, 79, 11, 76, 85, 11, 52, 30, 85, 90, 24, 4, 38, 34, 50, 66, 48, 12, 54, 47, 4, 37, 6, 43, 21, 8, 26, 8, 40, 61, 97, 86, 17, 86, 53, 79, 35, 57]\n"
      ]
     }
    ],
@@ -459,7 +459,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{2, 3, 6, 9, 11, 12, 13, 14, 16, 17, 18, 21, 23, 25, 27, 28, 29, 30, 32, 33, 34, 35, 36, 37, 39, 40, 41, 42, 47, 49, 50, 53, 54, 55, 57, 58, 59, 61, 64, 68, 70, 71, 73, 76, 77, 81, 83, 87, 90, 91, 92, 95, 96, 99}\n",
+      "{1, 2, 3, 4, 6, 7, 8, 9, 10, 11, 12, 17, 19, 21, 23, 24, 26, 28, 30, 34, 35, 36, 37, 38, 39, 40, 43, 46, 47, 48, 50, 52, 53, 54, 57, 59, 61, 62, 65, 66, 69, 72, 76, 78, 79, 82, 83, 85, 86, 87, 88, 90, 95, 96, 97, 98}\n",
       "80\n"
      ]
     }
@@ -487,7 +487,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1, 5, 7, 8, 10, 15, 19, 20, 22, 24, 38, 43, 44, 46, 48, 51, 52, 62, 63, 65, 66, 67, 69, 72, 75, 78, 79, 80, 82, 84, 85, 86, 88, 93, 94, 97}\n"
+      "{0, 13, 14, 15, 16, 18, 20, 22, 25, 27, 29, 32, 33, 41, 42, 44, 45, 49, 51, 55, 56, 58, 60, 64, 67, 68, 71, 77, 80, 84, 91, 92, 93, 94, 99}\n"
      ]
     }
    ],
@@ -513,7 +513,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{2, 3, 34, 35, 6, 36, 71, 99, 16, 50}\n"
+      "{4, 69, 9, 43, 47, 17, 53, 57, 26, 28, 30}\n"
      ]
     }
    ],
@@ -539,7 +539,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{9, 11, 12, 13, 14, 17, 18, 21, 23, 25, 27, 28, 29, 30, 32, 33, 37, 39, 40, 41, 42, 47, 49, 53, 54, 55, 57, 58, 59, 61, 64, 68, 70, 73, 76, 77, 81, 83, 87, 90, 91, 92, 95, 96}\n"
+      "{1, 2, 3, 6, 7, 8, 10, 11, 12, 19, 21, 23, 24, 34, 35, 36, 37, 38, 39, 40, 46, 48, 50, 52, 54, 59, 61, 62, 65, 66, 72, 76, 78, 79, 82, 83, 85, 86, 87, 88, 90, 95, 96, 97, 98}\n"
      ]
     }
    ],
@@ -618,7 +618,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1, 5, 7, 8, 9, 10, 11, 12, 13, 14, 15, 17, 18, 19, 20, 21, 22, 23, 24, 25, 27, 28, 29, 30, 32, 33, 37, 38, 39, 40, 41, 42, 43, 44, 46, 47, 48, 49, 51, 52, 53, 54, 55, 57, 58, 59, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 72, 73, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 90, 91, 92, 93, 94, 95, 96, 97}\n"
+      "{0, 1, 2, 3, 6, 7, 8, 10, 11, 12, 13, 14, 15, 16, 18, 19, 20, 21, 22, 23, 24, 25, 27, 29, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 44, 45, 46, 48, 49, 50, 51, 52, 54, 55, 56, 58, 59, 60, 61, 62, 64, 65, 66, 67, 68, 71, 72, 76, 77, 78, 79, 80, 82, 83, 84, 85, 86, 87, 88, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99}\n"
      ]
     }
    ],
@@ -700,8 +700,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1, 2, 3, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 27, 28, 29, 30, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 57, 58, 59, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 90, 91, 92, 93, 94, 95, 96, 97, 99}\n",
-      "{1, 2, 3, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 27, 28, 29, 30, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 57, 58, 59, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 90, 91, 92, 93, 94, 95, 96, 97, 99}\n"
+      "{0, 1, 2, 3, 4, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 64, 65, 66, 67, 68, 69, 71, 72, 76, 77, 78, 79, 80, 82, 83, 84, 85, 86, 87, 88, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99}\n",
+      "{0, 1, 2, 3, 4, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 64, 65, 66, 67, 68, 69, 71, 72, 76, 77, 78, 79, 80, 82, 83, 84, 85, 86, 87, 88, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99}\n"
      ]
     }
    ],
@@ -756,7 +756,7 @@
     {
      "data": {
       "text/plain": [
-       "1"
+       "0"
       ]
      },
      "execution_count": 26,
@@ -788,7 +788,7 @@
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
      "execution_count": 27,
@@ -809,7 +809,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{5, 7, 8, 10, 12, 13, 14, 15, 17, 18, 20, 22, 23, 24, 25, 27, 28, 30, 32, 33, 37, 38, 40, 42, 43, 44, 46, 47, 48, 52, 53, 54, 55, 57, 58, 62, 63, 64, 65, 66, 67, 68, 70, 72, 73, 75, 76, 77, 78, 80, 82, 83, 84, 85, 86, 87, 88, 90, 92, 93, 94, 95, 96, 97}\n"
+      "{2, 3, 6, 7, 8, 10, 12, 13, 14, 15, 16, 18, 20, 22, 23, 24, 25, 27, 32, 33, 34, 35, 36, 37, 38, 40, 42, 44, 45, 46, 48, 50, 52, 54, 55, 56, 58, 60, 62, 64, 65, 66, 67, 68, 72, 76, 77, 78, 80, 82, 83, 84, 85, 86, 87, 88, 90, 92, 93, 94, 95, 96, 97, 98}\n"
      ]
     }
    ],
@@ -938,10 +938,39 @@
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('conversation', 1), (\"we're\", 1), ('plate', 1), ('sour', 1), ('jukebox', 1), ('taxi', 1), ('fast', 1), ('bag', 1), ('man', 1), ('going', 1), ('one', 1), ('backseat', 1), ('friends', 1), ('take', 1), ('play', 1), ('okay', 1), ('begin', 1), ('over', 1), ('just', 1), ('are', 1), ('tell', 1), ('drinking', 1), ('our', 1), ('where', 1), (\"i'll\", 1), ('all', 1), (\"isn't\", 1), ('make', 1), ('lover', 1), ('get', 1), ('radio', 1), ('give', 1), ('can', 1), ('club', 1), ('it', 1), ('out', 1), ('chance', 1), ('first', 1), ('table', 1), ('thrifty', 1), ('driver', 1), ('slow', 1), ('dance', 1), ('trust', 1), ('family', 1), ('week', 1), ('date', 1), ('leave', 1), ('at', 1), ('hand', 1), ('how', 1), ('eat', 1), ('about', 1), ('story', 1), ('sweet', 1), ('best', 1), ('let', 1), ('van', 1), ('shots', 1), ('place', 1), ('find', 1), ('kiss', 1), ('stop', 1), ('bar', 1), (\"don't\", 2), ('mind', 2), ('know', 2), ('so', 2), ('start', 2), ('boy', 2), ('girl', 2), ('singing', 2), ('doing', 2), ('somebody', 2), ('handmade', 2), ('may', 2), ('that', 2), ('much', 2), ('grab', 2), ('was', 2), ('say', 2), ('waist', 2), ('want', 2), (\"let's\", 2), ('not', 2), ('crazy', 2), ('go', 2), ('to', 2), ('fill', 2), ('hours', 2), ('push', 3), ('then', 3), ('put', 3), ('room', 3), ('magnet', 3), ('up', 3), ('pull', 3), ('last', 3), ('do', 3), ('smell', 3), ('although', 3), ('falling', 3), ('were', 3), ('night', 3), ('heart', 3), ('for', 3), ('bedsheets', 3), ('talk', 4), ('too', 5), ('is', 5), ('every', 6), ('new', 6), ('follow', 6), ('brand', 6), ('of', 6), ('i', 6), ('day', 6), ('lead', 6), ('shape', 6), ('discovering', 6), ('something', 6), ('we', 7), ('a', 8), ('like', 10), ('me', 10), ('now', 11), ('baby', 14), ('you', 16), ('be', 16), ('body', 17), ('the', 18), ('your', 21), ('with', 22), (\"i'm\", 23), ('and', 23), ('love', 25), ('in', 27), ('my', 33), ('come', 37), ('on', 40)]\n",
+      "{'conversation': 1, \"we're\": 1, 'plate': 1, 'sour': 1, 'jukebox': 1, 'taxi': 1, 'fast': 1, 'bag': 1, 'man': 1, 'going': 1, 'one': 1, 'backseat': 1, 'friends': 1, 'take': 1, 'play': 1, 'okay': 1, 'begin': 1, 'over': 1, 'just': 1, 'are': 1, 'tell': 1, 'drinking': 1, 'our': 1, 'where': 1, \"i'll\": 1, 'all': 1, \"isn't\": 1, 'make': 1, 'lover': 1, 'get': 1, 'radio': 1, 'give': 1, 'can': 1, 'club': 1, 'it': 1, 'out': 1, 'chance': 1, 'first': 1, 'table': 1, 'thrifty': 1, 'driver': 1, 'slow': 1, 'dance': 1, 'trust': 1, 'family': 1, 'week': 1, 'date': 1, 'leave': 1, 'at': 1, 'hand': 1, 'how': 1, 'eat': 1, 'about': 1, 'story': 1, 'sweet': 1, 'best': 1, 'let': 1, 'van': 1, 'shots': 1, 'place': 1, 'find': 1, 'kiss': 1, 'stop': 1, 'bar': 1, \"don't\": 2, 'mind': 2, 'know': 2, 'so': 2, 'start': 2, 'boy': 2, 'girl': 2, 'singing': 2, 'doing': 2, 'somebody': 2, 'handmade': 2, 'may': 2, 'that': 2, 'much': 2, 'grab': 2, 'was': 2, 'say': 2, 'waist': 2, 'want': 2, \"let's\": 2, 'not': 2, 'crazy': 2, 'go': 2, 'to': 2, 'fill': 2, 'hours': 2, 'push': 3, 'then': 3, 'put': 3, 'room': 3, 'magnet': 3, 'up': 3, 'pull': 3, 'last': 3, 'do': 3, 'smell': 3, 'although': 3, 'falling': 3, 'were': 3, 'night': 3, 'heart': 3, 'for': 3, 'bedsheets': 3, 'talk': 4, 'too': 5, 'is': 5, 'every': 6, 'new': 6, 'follow': 6, 'brand': 6, 'of': 6, 'i': 6, 'day': 6, 'lead': 6, 'shape': 6, 'discovering': 6, 'something': 6, 'we': 7, 'a': 8, 'like': 10, 'me': 10, 'now': 11, 'baby': 14, 'you': 16, 'be': 16, 'body': 17, 'the': 18, 'your': 21, 'with': 22, \"i'm\": 23, 'and': 23, 'love': 25, 'in': 27, 'my': 33, 'come': 37, 'on': 40}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "# Using sorted and operator.itemgetter, obtain a list of tuples of the dict key-value pairs which is sorted on the value.\n",
+    "import operator\n",
+    "\n",
+    "sorted_tups = sorted(word_freq.items(), key=operator.itemgetter(1))\n",
+    "\n",
+    "# Create an empty dictionary named word_freq2.\n",
+    "word_freq2 = {}\n",
+    "\n",
+    "# Iterate the list of tuples. Insert each key-value pair into word_freq2 as an object.\n",
+    "for e in sorted_tups:\n",
+    "    word_freq2[e[0]] = e[1]\n",
+    "\n",
+    "print(word_freq2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
